login and register constraint added and hyperlinks added in social media accounts and few bugs fixed in login page

--- a/Index.html
+++ b/Index.html
@@ -28,16 +28,25 @@
                     <button type="button" class="toggle-btn" onclick="register()">Register</button>
                 </div>
                 <div class="social-icons">
-                    <img src="fb.png">
-                    <img src="twit.jpg">
-                    <img src="insta.jpg">
-                    <img src="mail.jpg">
+					<a href="https://www.facebook.com">
+                    <img src="fb.png" alt="W3Schools.com" >
+                    </a>
+                   <a href="https://www.twitter.com">
+                    <img src="twit.jpg" alt="twitter" >
+                    </a>
+					<a href="https://www.instagram.com">
+                    <img src="insta.jpg" alt="instagram" >
+                    </a>
+					<a href="https://www.gmail.com">
+                    <img src="mail.jpg" alt="gmail" >
+                    </a>
+
                 </div>
                 <div class="input-group" id="Login"  >
-                    <input type="text" id="email" class="input-field"  placeholder="User Id"  >
-                    <input type="text" id="password" class="input-field" placeholder="Password" >
+                    <input type="text" id="email" name="ëmail" class="input-field"  placeholder="User Id"  >
+                    <input type="text" id="password" name="password" class="input-field" placeholder="Password" >
                     <input type ="checkbox"   class="check-box"><span>Remember Password</span>
-                    <input type="submit"  value="Log in" class="submit-btn" onclick="loginn()" >
+                    <input type="submit"  value="Log in" class="submit-btn" onclick="loginnvalidate()" >
 					
 				
                 </div>
