booking page,thankyou page,contactus page along with css and images

--- a/Home.html
+++ b/Home.html
@@ -25,6 +25,7 @@
                     <!-- Here are the hyperlinks using anchor tag -->
                <a href="Home.html">Home</a>
                     <a href="Product.html">Cars </a>
+						 <a  href="Productdetail.html">Car details</a>
                     <a class="active" href="Contactus.html">Contact Us</a>
                 </td>
             </tr>
@@ -36,12 +37,12 @@
         <table>
             <tr>
                 <td width="45%">
-                    <h2 style="margin-left: 50px;font-family: Century Regular;">Auto di Lusso est une compagnie de
-                        location<br>
-                        d’auto de luxe a prix réaliste.<br>
-                        Lors de la location d’un véhicule chez nous<br>
-                        on vous offre une livraison à n’importe<br>
-                        quelle localisation qui vous convient.</h2>
+                    <h2 style="margin-left: 50px;font-family: Century Regular;">Auto di Lusso is a rental company
+                luxury<br>
+				car at a realistic price.<br>
+            When renting a vehicle from us<br>
+           we offer you delivery anywhere<br>
+           which location is right for you.<br>
                 </td>
                 <td width="65%">
                     <img src="Image1.png" width="100%"
@@ -60,8 +61,9 @@
                 <div class="content">
                     <!--    Here we have used paragraph tag to display content along with some inline css
                     which will align content set font,margin to content -->
-                    <p style="font-size: 25px;text-align: center;">Pour une expérience</p>
-                    <p style="font-size: 25px;text-align: center;margin-top: -25px;">inoubliable</p>
+                    <p style="font-size: 25px;text-align: center;">For an
+unforgettable </p>
+                    <p style="font-size: 25px;text-align: center;margin-top: -25px;">experience</p>
                 </div>
             </td>
             <td>
