--- a/Productdetail.html
+++ b/Productdetail.html
@@ -26,10 +26,10 @@
         <!-- Here we define the column element for hyperlinks for other pages -->
         <td>
           <!-- Here are the hyperlinks using anchor tag -->
-         <!--  <a href="Home.html">Home</a>
+          <a href="Home.html">Home</a>
                     <a href="Product.html">Cars </a>
-                    <a class="active" href="Contactus.html">Contact Us</a> -->
-                    <!-- <a href="Contactus.html">Contact us</a> -->
+                    	 <a  href="Productdetail.html">Car details</a>
+                     <a href="Contactus.html">Contact us</a> 
         </td>
       </tr>
     </table>
