--- a/Product.html
+++ b/Product.html
@@ -27,7 +27,9 @@
                     <!-- Here are the hyperlinks using anchor tag -->
                 <a href="Home.html">Home</a>
                     <a href="Product.html">Cars </a>
+					 <a  href="Productdetail.html">Car details</a>
                     <a class="active" href="Contactus.html">Contact Us</a>
+					
                 </td>
             </tr>
         </table>
@@ -37,52 +39,52 @@
         <div class="item1"><img src="image 4.png">
             <!-- this div tag is used for displaying the text with overlay background -->
             <div class="content">
-                <Button class="button buttoneff" onclick="productDetail()">VOIR LES <br>DÉTAILS</Button>
+                <Button class="button buttoneff" onclick="productDetail()">See the <br>Details</Button>
             </div>
             <!-- p tag is used for displaying the name of the car and its model with the price per hour -->
-            <p class="left-top"> &nbsp; &nbsp; &nbsp; &nbsp; FERRARI 488 GTB <br>4599$/jour</p>
+            <p class="left-top"> &nbsp; &nbsp; &nbsp; &nbsp; FERRARI 488 GTB <br>4599$/hour</p>
         </div>
         <div class="item2"><img src="image12.png">
             <div class="content1">
-                <Button class="button buttoneff" onclick="productDetail()">VOIR LES <br>DÉTAILS</Button>
+                <Button class="button buttoneff" onclick="productDetail()">See the <br>Details</Button>
             </div>
-            <p class="right-top"> &nbsp; &nbsp; &nbsp; &nbsp; LAMBORGHINI HURACAN SPYDER <br>4500$/jour</p>
+            <p class="right-top"> &nbsp; &nbsp; &nbsp; &nbsp; LAMBORGHINI HURACAN SPYDER <br>4500$/hour</p>
         </div>
         <div class="item3"><img src="image 5.png">
             <div class="content2">
-                <Button class="button buttoneff" onclick="productDetail()">VOIR LES <br>DÉTAILS</Button>
+                <Button class="button buttoneff" onclick="productDetail()">See the <br>Details</Button>
             </div>
-            <p class="middle-top"> &nbsp; &nbsp; &nbsp; &nbsp; PORSHE 911 GT3RS<br>3100$/jour</p>
+            <p class="middle-top"> &nbsp; &nbsp; &nbsp; &nbsp; PORSHE 911 GT3RS<br>3100$/hour</p>
         </div>
         <div class="item4"><img src="image 9.png">
             <div class="content3">
-                <Button class="button buttoneff" onclick="productDetail()">VOIR LES <br>DÉTAILS</Button>
+                <Button class="button buttoneff" onclick="productDetail()">See the<br>Details</Button>
             </div>
-            <p class="middle"> &nbsp; &nbsp; &nbsp; &nbsp; TESLA MODEL X P100D<br>2394$/jour</p>
+            <p class="middle"> &nbsp; &nbsp; &nbsp; &nbsp; TESLA MODEL X P100D<br>2394$/hour</p>
         </div>
         <div class="item5"><img src="image 7.png">
             <div class="content4">
-                <Button class="button buttoneff" onclick="productDetail()">VOIR LES <br>DÉTAILS</Button>
+                <Button class="button buttoneff" onclick="productDetail()">See the<br>Details</Button>
             </div>
-            <p class="middle-bottom"> &nbsp; &nbsp; &nbsp; &nbsp; TOYOTA SUPRA MK5<br>1900$/jour</p>
+            <p class="middle-bottom"> &nbsp; &nbsp; &nbsp; &nbsp; TOYOTA SUPRA MK5<br>1900$/hour</p>
         </div>
         <div class="item6"><img src="image11.png">
             <div class="content5">
-                <Button class="button buttoneff" onclick="productDetail()">VOIR LES <br>DÉTAILS</Button>
+                <Button class="button buttoneff" onclick="productDetail()">See the <br>Details</Button>
             </div>
-            <p class="middle-right">&nbsp; &nbsp; &nbsp; &nbsp; TESLA MODEL S P100D<br>1899$/jour</p>
+            <p class="middle-right">&nbsp; &nbsp; &nbsp; &nbsp; TESLA MODEL S P100D<br>1899$/hour</p>
         </div>
         <div class="item7"><img src="image 3.png">
             <div class="content6">
-                <Button class="button buttoneff" onclick="productDetail()">VOIR LES <br>DÉTAILS</Button>
+                <Button class="button buttoneff" onclick="productDetail()">See the <br>Details</Button>
             </div>
-            <p class="bottom-left">&nbsp; &nbsp; &nbsp; &nbsp; AVENTADOR SVJ 63 ROADSTER<br>4900$/jour</p>
+            <p class="bottom-left">&nbsp; &nbsp; &nbsp; &nbsp; AVENTADOR SVJ 63 ROADSTER<br>4900$/hour</p>
         </div>
         <div class="item8"><img src="image 8.png">
             <div class="content7">
-                <Button class="button buttoneff " onclick="productDetail()">VOIR LES <br>DÉTAILS</Button>
+                <Button class="button buttoneff " onclick="productDetail()">See the <br>Details</Button>
             </div>
-            <p class="bottom-right">&nbsp; &nbsp; &nbsp; &nbsp; LAMBORGHINI HIRICAN EVO<br>4000$/jour</p>
+            <p class="bottom-right">&nbsp; &nbsp; &nbsp; &nbsp; LAMBORGHINI HIRICAN EVO<br>4000$/hour</p>
         </div>
     </div>
 
